; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-search.c_store_res_aud.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-search.c_store_res_aud.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"store_res_aud(%d)\0A\00", align 1
@Q_aux_num = common dso_local global i32 0, align 4
@User = common dso_local global i32* null, align 8
@AuxCond = common dso_local global i32* null, align 8
@R = common dso_local global i32* null, align 8
@R_tot = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @store_res_aud(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @vkprintf(i32 3, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %4)
  store i64 0, i64* %3, align 8
  br label %6

6:                                                ; preds = %31, %1
  %7 = load i64, i64* %3, align 8
  %8 = trunc i64 %7 to i32
  %9 = load i32, i32* @Q_aux_num, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %34

11:                                               ; preds = %6
  %12 = load i32*, i32** @User, align 8
  %13 = load i32, i32* %2, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  %16 = load i32, i32* %15, align 4
  %17 = load i32*, i32** @AuxCond, align 8
  %18 = load i64, i64* %3, align 8
  %19 = getelementptr inbounds i32, i32* %17, i64 %18
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %2, align 4
  %22 = call i64 @user_matches_condition(i32 %16, i32 %20, i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %30

24:                                               ; preds = %11
  %25 = load i32*, i32** @R, align 8
  %26 = load i64, i64* %3, align 8
  %27 = getelementptr inbounds i32, i32* %25, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %27, align 4
  br label %30

30:                                               ; preds = %24, %11
  br label %31

31:                                               ; preds = %30
  %32 = load i64, i64* %3, align 8
  %33 = add nsw i64 %32, 1
  store i64 %33, i64* %3, align 8
  br label %6

34:                                               ; preds = %6
  %35 = load i32, i32* @R_tot, align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* @R_tot, align 4
  ret void
}

declare dso_local i32 @vkprintf(i32, i8*, i32) #1

declare dso_local i64 @user_matches_condition(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
